# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  constants.py  engine.py
brain_games/games/: brain_ap.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
brain_games/scripts/: brain_ap.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
