[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Mind Games"
authors = ["Vladimir Yashnikov <yashnikov@yashnikov.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
