[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first hexlet project"
authors = ["Vladimir Yashnikov <yashnikov@yashnikov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
